tests/programs/a1/local/invalid/test_long.java
public class test_long {
  protected long x;
}